# thornspkg

./: CHANGELOG-remote-recipes.md  PKG-INFO  README.md  RESUMO_ALTERACOES.md  pyproject.toml
docs/: ATUALIZAR_O_THORN.md
recipes/: algo.txt  bash.toml  bzip2.toml  curl.toml  git.toml  libffi.toml  ncurses.toml  openssl.toml  python.toml  readline.toml  sqlite.toml  xz.toml  zlib.toml
scripts/: demo_v04.py  test_selfupdate_e2e.py  test_upgrade_cleanup.py
tests/: __init__.py  test_cache.py  test_commands_common.py  test_db.py  test_depgraph.py  test_fileconflict.py  test_selfupdate.py  test_upgrade.py  test_version.py
thornspkg/: __init__.py  __main__.py  builder.py  cache.py  cli.py  colors.py  config.py  db.py  depgraph.py  downloader.py  fileconflict.py  hooks.py  lock.py  orphan.py  recipe.py  repo.py  selfupdate.py  signature.py  suggest.py  version.py
thornspkg/commands/: __init__.py  cache_cmd.py  check.py  common.py  inspect.py  install.py  orphan.py  remove.py  repo.py  search.py  selfupdate.py  sync.py  upgrade.py
